configure.ac: Look for $MESA/lib64 as well and prefer that

--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,11 @@ AC_ARG_WITH([mesa],
                     [Path to mesa repo for vulkan headers and libraries])])
 if test "x$with_mesa" != x; then
     MESA_CPPFLAGS=-I$with_mesa/include
-    MESA_LDFLAGS="-L$with_mesa/lib -R$with_mesa/lib"
+    if test -d "$with_mesa/lib64"; then
+        MESA_LDFLAGS="-L$with_mesa/lib64 -R$with_mesa/lib64"
+    else
+        MESA_LDFLAGS="-L$with_mesa/lib -R$with_mesa/lib"
+    fi
 fi
 
 AC_SUBST([MESA_CPPFLAGS])
