--- a/configure.ac
+++ b/configure.ac
@@ -34,5 +34,6 @@ AC_SUBST([MINIGBM_CPPFLAGS])
 AC_SUBST([MINIGBM_LDFLAGS])
 
 PKG_CHECK_MODULES([LIBDRM], [libdrm])
+PKG_CHECK_MODULES([WAYLAND], [wayland-client])
 
 AC_OUTPUT(Makefile)
