--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-Makefile
-Makefile.in
 *~
-.deps
-aclocal.m4
-autom4te.cache
-compile
-config.guess
-config.log
-config.status
-config.sub
-configure
-depcomp
-install-sh
-libtool
-ltmain.sh
-missing
-vkcube
-*.o
+# I like to build in build* named subdirectories
+build*
