allow building without wayland or xcb

--- a/meson.build
+++ b/meson.build
@@ -6,8 +6,8 @@ cc = meson.get_compiler('c')
 dep_libdrm = dependency('libdrm')
 dep_gbm = dependency('gbm')
 dep_libpng = dependency('libpng')
-dep_wayland = dependency('wayland-client')
-dep_xcb = dependency('xcb')
+dep_wayland = dependency('wayland-client', required : get_option('wayland'))
+dep_xcb = dependency('xcb', required : get_option('x11'))
 dep_vulkan = dependency('vulkan')
 dep_m = cc.find_library('m', required : false)
 
@@ -15,6 +15,14 @@ cc = meson.get_compiler('c')
 defs = []
 if cc.has_header('vulkan/vulkan_intel.h')
   defs += '-DHAVE_VULKAN_INTEL_H'
+endif
+
+if get_option('wayland').enabled()
+  defs += '-DVKCUBE_USE_WAYLAND'
+endif
+
+if get_option('x11').enabled()
+  defs += '-DVKCUBE_USE_X11'
 endif
 
 # See https://github.com/google/shaderc
